6784849: par compact - can fail when to_space is non-empty

Reviewed-by: jmasa, tonyp